# snarkjs-to-aptos

./: .gitignore  Cargo.toml  readme.md
groth16_module_template/: Move.toml
groth16_module_template/sources/: groth16.move
src/: main.rs
